--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "dev": "lite-server"
     },
     "dependencies": {
-        "angular-spinners": "^3.1.2",
-        "ng-prettyjson": "^0.2.0"
+        "angular-spinners": "^3.1.2"
     },
     "devDependencies": {
         "lite-server": "^2.3.0"
